# texlab

./: .azure-pipelines.yml  .build-steps.yml  .gitattributes  .gitignore  .npmignore  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  build.gradle  build.rs  codecov.yml  fuse.ts  package.json  rust-toolchain  settings.gradle  setup.py  texlab.1  texlab.tex  tsconfig.json  tslint.json  webpack.config.ts
.github/: dependabot.yml
crates/base-db/: Cargo.toml
crates/base-db/src/: config.rs  data.rs  deps.rs  diagnostics.rs  document.rs  graph.rs  language.rs  lib.rs  semantics.rs  util.rs  workspace.rs
crates/base-db/src/diagnostics/: bib.rs  log.rs  tex.rs
crates/base-db/src/semantics/: aux.rs  auxiliary.rs  bib.rs  tex.rs
crates/base-db/src/util/: expand.rs  label.rs  line_index.rs  queries.rs  regex_filter.rs
crates/base-feature/: Cargo.toml
crates/base-feature/src/: lib.rs  normalize.rs  normalize_uri.rs  placeholders.rs
crates/bibfmt/: Cargo.toml
crates/bibfmt/src/: lib.rs  tests.rs
crates/bibtex-utils/: Cargo.toml
crates/bibtex-utils/src/: field.rs
crates/bibtex-utils/src/field/: author.rs  date.rs  number.rs  text.rs
crates/citeproc/: Cargo.toml
crates/citeproc/script/: package-lock.json  package.json
crates/citeproc/src/: driver.rs  entry.rs  lib.rs  tests.rs
crates/citeproc/src/field/: author.rs  date.rs  number.rs  text.rs
crates/citeproc/src/snapshots/: citeproc__tests__article_aksin_2006.snap  citeproc__tests__article_betram_1996.snap  citeproc__tests__article_blom_2021.snap  citeproc__tests__article_jain_1999.snap  citeproc__tests__article_kastenholz_2006.snap  citeproc__tests__article_rivest_1978.snap  citeproc__tests__book_aho_2006.snap  citeproc__tests__book_averroes_1998.snap  citeproc__tests__book_knuth_1984.snap  citeproc__tests__collection_matuz_1990.snap  citeproc__tests__inproceedings_combi_2004.snap  citeproc__tests__inproceedings_erwin_2007.snap  citeproc__tests__mvbook_nietzsche_1988.snap  citeproc__tests__patent_almendro_1998.snap
crates/commands/: Cargo.toml
crates/commands/src/: build.rs  change_env.rs  clean.rs  dep_graph.rs  find_envs.rs  fwd_search.rs  lib.rs  placeholders.rs
crates/commands/src/snapshots/: commands__find_envs__tests__test.snap
crates/completion/: Cargo.toml
crates/completion-data/: Cargo.toml
crates/completion-data/src/: lib.rs
crates/completion/benches/: bench_main.rs
crates/completion/src/: lib.rs  providers.rs  tests.rs  util.rs
crates/completion/src/providers/: argument.rs  citations.rs  color.rs  color_model.rs  command.rs  entry_type.rs  environment.rs  field.rs  glossary.rs  import.rs  include.rs  label.rs  label_def.rs  label_ref.rs  tikz_library.rs
crates/completion/src/util/: builder.rs  matchers.rs  patterns.rs
crates/definition/: Cargo.toml
crates/definition/src/: acronym.rs  citation.rs  command.rs  include.rs  label.rs  lib.rs  string_ref.rs  tests.rs
crates/diagnostics/: Cargo.toml
crates/diagnostics/src/: build_log.rs  chktex.rs  citations.rs  grammar.rs  imports.rs  labels.rs  lib.rs  manager.rs  tests.rs  types.rs  util.rs
crates/diagnostics/src/grammar/: bib.rs  tex.rs
crates/folding/: Cargo.toml
crates/folding/src/: lib.rs  tests.rs
crates/highlights/: Cargo.toml
crates/highlights/src/: label.rs  lib.rs  tests.rs
crates/hover/: Cargo.toml
crates/hover/src/: citation.rs  command.rs  entry_type.rs  field_type.rs  label.rs  lib.rs  package.rs  string_ref.rs  tests.rs
crates/inlay-hints/: Cargo.toml
crates/inlay-hints/src/: citations.rs  label.rs  lib.rs  tests.rs
crates/ipc/: Cargo.toml
crates/ipc/src/: lib.rs
crates/jsonrpc/: Cargo.toml
crates/jsonrpc/src/: client.rs  lib.rs  server.rs  types.rs
crates/jsonrpc_derive/: Cargo.toml
crates/jsonrpc_derive/src/: lib.rs
crates/links/: Cargo.toml
crates/links/src/: include.rs  lib.rs  tests.rs
crates/parser/: Cargo.toml
crates/parser/src/: bibtex.rs  build_log.rs  config.rs  file_list.rs  latex.rs  latexmkrc.rs  lib.rs  util.rs
crates/parser/src/bibtex/: tests.rs
crates/parser/src/build_log/: tests.rs
crates/parser/src/latex/: lexer.rs  tests.rs
crates/parser/src/snapshots/: parser__bibtex__tests__parse@comment.txt.snap  parser__bibtex__tests__parse@issue_809.txt.snap  parser__bibtex__tests__parse@issue_945.txt.snap  parser__bibtex__tests__parse@preamble.txt.snap  parser__bibtex__tests__parse@samples__aho_2006.txt.snap  parser__bibtex__tests__parse@samples__aksin_2006.txt.snap  parser__bibtex__tests__parse@samples__almendro_1998.txt.snap  parser__bibtex__tests__parse@samples__averroes_1998.txt.snap  parser__bibtex__tests__parse@samples__betram_1996.txt.snap  parser__bibtex__tests__parse@samples__blom_2021.txt.snap  parser__bibtex__tests__parse@samples__combi_2004.txt.snap  parser__bibtex__tests__parse@samples__erwin_2007.txt.snap  parser__bibtex__tests__parse@samples__jain_1999.txt.snap  parser__bibtex__tests__parse@samples__kastenholz_2006.txt.snap  (+131 more)
crates/references/: Cargo.toml
crates/references/src/: command.rs  entry.rs  label.rs  lib.rs  string_def.rs  tests.rs
crates/rename/: Cargo.toml
crates/rename/src/: command.rs  entry.rs  label.rs  lib.rs  tests.rs
crates/symbols/: Cargo.toml
crates/symbols/src/: document.rs  lib.rs  types.rs  workspace.rs
crates/test-utils/: Cargo.toml
crates/test-utils/src/: fixture.rs  lib.rs
crates/tex/: Cargo.toml
crates/tex/src/: compile.rs  language.rs  lib.rs  miktex.rs  tectonic.rs  texlive.rs
crates/texlab/: Cargo.toml
crates/texlab/benches/: bench_main.rs
crates/texlab/src/: action.rs  citation.rs  client.rs  config.rs  features.rs  lib.rs  main.rs  server.rs  util.rs
crates/texlab_citeproc/: Cargo.toml  build.rs
crates/texlab_citeproc/script/: webpack.config.ts
crates/texlab_citeproc/src/: apa.csl  bibutils.rs  lib.rs  ris.rs
crates/texlab_completion/: Cargo.toml
crates/texlab_completion/src/: factory.rs  lib.rs  preselect.rs  quality.rs
futures_boxed/: Cargo.toml
futures_boxed/src/: lib.rs
jsonrpc/: Cargo.toml
jsonrpc/src/: client.rs  lib.rs  server.rs  types.rs
(+2843 files in other folders)
