[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "5.23.1"
license = "GPL-3.0"
authors = [
    "Eric Förster <eric.foerster@outlook.com>",
    "Patrick Förster <patrick.foerster@outlook.de>",
]
edition = "2021"
rust-version = "1.80"

[workspace.dependencies]
anyhow = "1.0.98"
criterion = "0.5.1"
crossbeam-channel = "0.5.15"
dirs = "6.0.0"
expect-test = "1.5.1"
itertools = "0.13.0"
log = "0.4.27"
notify = "8.1.0"
notify-debouncer-full = "0.5.0"
once_cell = "1.21.3"
regex = "1.11.1"
rowan = "0.15.16"
rustc-hash = "2.1.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
shellexpand = "3.1.1"
tempfile = "3.19.1"
titlecase = "3.6.0"
unicode-normalization = "0.1.24"
url = "2.5.4"

[profile.release]
lto = "thin"
incremental = true

[profile.bench]
lto = "thin"
incremental = true
