[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "5.24.0"
license = "GPL-3.0"
authors = [
    "Eric Förster <eric.foerster@outlook.com>",
    "Patrick Förster <patrick.foerster@outlook.de>",
]
edition = "2024"
rust-version = "1.89"

[workspace.dependencies]
anyhow = "1.0.100"
bstr = "1.12.1"
chrono = { version = "0.4.42", default-features = false }
clap = "4.5.53"
criterion = "0.8.1"
crossbeam-channel = "0.5.15"
dirs = "6.0.0"
encoding_rs = "0.8.35"
encoding_rs_io = "0.1.7"
expect-test = "1.5.1"
fern = "0.7.1"
flate2 = "1.1.5"
human_name = "2.0.4"
isocountry = "0.3.2"
itertools = "0.14.0"
libc = "0.2.178"
log = "0.4.29"
logos = "0.15.1"
lsp-server = "0.7.9"
lsp-types = "0.97.0"
multimap = "0.10.1"
notify = "8.0.0"
notify-debouncer-full = "0.6.0"
once_cell = "1.21.3"
parking_lot = "0.12.5"
pathdiff = "0.2.3"
percent-encoding = "2.3.2"
rayon = "1.11.0"
regex = "1.12.2"
rowan = "0.16.1"
rustc-hash = "2.1.1"
serde = "1.0.228"
serde_json = "1.0.145"
serde_regex = "1.1.0"
serde_repr = "0.1.20"
shellexpand = "3.1.1"
tempfile = "3.24.0"
thiserror = "2.0.17"
threadpool = "1.8.1"
titlecase = "3.6.0"
uds_windows = "1.1.0"
unicode-normalization = "0.1.25"
url = "2.5.7"
versions = "7.0.0"

[profile.release]
lto = "thin"
incremental = true

[profile.bench]
lto = "thin"
incremental = true
