[package]
name = "jsonrpc"
version = "0.1.0"
authors = [
    "Eric Förster <efoerster@users.noreply.github.com>",
    "Patrick Förster <pfoerster@users.noreply.github.com>"]
edition = "2018"

[dependencies]
futures-preview = { version = "0.3.0-alpha.15", features = ["compat"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"
