[package]
name = "base-db"
version = "0.0.0"
license.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
bibtex-utils = { path = "../bibtex-utils" }
dirs = "5.0.1"
distro = { path = "../distro" }
itertools = "0.12.0"
line-index = { path = "../line-index" }
log = "0.4.20"
notify = "6.0.1"
once_cell = "1.18.0"
parser = { path = "../parser" }
percent-encoding = "2.3.0"
regex = "1.10.2"
rowan = "0.15.13"
rustc-hash = "1.1.0"
syntax = { path = "../syntax" }
url = "2.5.0"

[lib]
doctest = false
