[package]
name = "base-db"
version = "0.0.0"
license.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
bibtex-utils = { path = "../bibtex-utils" }
dirs.workspace = true
distro = { path = "../distro" }
itertools.workspace = true
line-index = { path = "../line-index" }
log.workspace = true
notify-debouncer-full.workspace = true
notify.workspace = true
once_cell.workspace = true
parser = { path = "../parser" }
percent-encoding = "2.3.0"
regex.workspace = true
rowan.workspace = true
rustc-hash.workspace = true
shellexpand = "3.1.0"
syntax = { path = "../syntax" }
titlecase.workspace = true
url.workspace = true

[lib]
doctest = false
