[package]
name = "bibfmt"
version = "0.0.0"
license.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
rowan = "0.15.15"
syntax = { path = "../syntax" }
line-index = { path = "../line-index" }

[lib]
doctest = false

[dev-dependencies]
expect-test = "1.4.1"
parser = { path = "../parser" }
