[package]
name = "bibtex-utils"
version = "0.0.0"
license.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
chrono = { version = "0.4.38", default-features = false, features = ["std"] }
human_name = "2.0.3"
itertools = "0.13.0"
rowan.workspace = true
rustc-hash = "2.0.0"
syntax = { path = "../syntax" }
unicode-normalization = "0.1.23"

[lib]
doctest = false

[dev-dependencies]
expect-test = "1.5.0"
parser = { path = "../parser" }
