[package]
name = "bibtex-utils"
version = "0.0.0"
license.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
chrono = { version = "0.4.39", default-features = false, features = ["std"] }
human_name = "2.0.4"
itertools.workspace = true
rowan.workspace = true
rustc-hash.workspace = true
syntax = { path = "../syntax" }
unicode-normalization.workspace = true

[lib]
doctest = false

[dev-dependencies]
expect-test.workspace = true
parser = { path = "../parser" }
