[package]
name = "bibtex-utils"
version = "0.0.0"
license.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
chrono = { workspace = true, features = ["std"] }
human_name.workspace = true
itertools.workspace = true
rowan.workspace = true
rustc-hash.workspace = true
syntax = { path = "../syntax" }
unicode-normalization.workspace = true

[lib]
doctest = false

[dev-dependencies]
expect-test.workspace = true
parser = { path = "../parser" }
