[package]
name = "citeproc"
version = "0.0.0"
license.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
bibtex-utils = { path = "../bibtex-utils" }
base-db = { path = "../base-db" }
isocountry = "0.3.2"
itertools = "0.13.0"
rowan.workspace = true
rustc-hash = "2.0.0"
syntax = { path = "../syntax" }
titlecase.workspace = true
unicode-normalization = "0.1.23"
url = "2.5.0"

[lib]
doctest = false

[dev-dependencies]
expect-test = "1.5.0"
parser = { path = "../parser" }
