[package]
name = "citeproc"
version = "0.0.0"
license.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
bibtex-utils = { path = "../bibtex-utils" }
base-db = { path = "../base-db" }
isocountry = "0.3.2"
itertools.workspace = true
rowan.workspace = true
rustc-hash.workspace = true
syntax = { path = "../syntax" }
titlecase.workspace = true
unicode-normalization.workspace = true
url.workspace = true

[lib]
doctest = false

[dev-dependencies]
expect-test.workspace = true
parser = { path = "../parser" }
