[package]
name = "commands"
version = "0.0.0"
license.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
base-db = { path = "../base-db" }
bstr.workspace = true
crossbeam-channel.workspace = true
itertools.workspace = true
libc.workspace = true
log.workspace = true
rowan.workspace = true
rustc-hash.workspace = true
syntax = { path = "../syntax" }
thiserror.workspace = true
url.workspace = true

[dev-dependencies]
distro = { path = "../distro" }
expect-test.workspace = true
test-utils = { path = "../test-utils" }

[lib]
doctest = false
