[package]
name = "completion-data"
version = "0.0.0"
license.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
flate2 = "1.0.30"
itertools = "0.13.0"
once_cell = "1.19.0"
rustc-hash = "2.0.0"
serde.workspace = true
serde_json.workspace = true

[lib]
doctest = false
