[package]
name = "completion-data"
version = "0.0.0"
license.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
flate2 = "1.0.31"
itertools.workspace = true
once_cell.workspace = true
rustc-hash.workspace = true
serde.workspace = true
serde_json.workspace = true

[lib]
doctest = false
