[package]
name = "completion-data"
version = "0.0.0"
license.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
base-db = { path = "../base-db" }
flate2 = "1.0.34"
itertools.workspace = true
once_cell.workspace = true
rustc-hash.workspace = true
serde.workspace = true
serde_json.workspace = true

[lib]
doctest = false
