[package]
name = "completion"
version = "0.0.0"
license.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
base-db = { path = "../base-db" }
completion-data = { path = "../completion-data" }
fuzzy-matcher = { version = "0.3.7", features = ["compact"] }
line-index = { path = "../line-index" }
rayon = "1.7.0"
rowan = "0.15.13"
rustc-hash = "1.1.0"
syntax = { path = "../syntax" }
url = "=2.3.1"

[dev-dependencies]
criterion = "0.5.1"
distro = { path = "../distro" }
expect-test = "1.4.1"
test-utils = { path = "../test-utils" }

[lib]
doctest = false

[[bench]]
name = "bench_main"
path = "benches/bench_main.rs"
harness = false
