[package]
name = "completion"
version = "0.0.0"
license.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
base-db = { path = "../base-db" }
completion-data = { path = "../completion-data" }
fuzzy-matcher = { version = "0.3.7", features = ["compact"] }
line-index = { path = "../line-index" }
rayon = "1.10.0"
rowan.workspace = true
rustc-hash.workspace = true
syntax = { path = "../syntax" }
url.workspace = true

[dev-dependencies]
criterion.workspace = true
distro = { path = "../distro" }
expect-test.workspace = true
test-utils = { path = "../test-utils" }
parser = { path = "../parser" }

[lib]
doctest = false

[[bench]]
name = "bench_main"
path = "benches/bench_main.rs"
harness = false
