[package]
name = "definition"
version = "0.0.0"
license.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
base-db = { path = "../base-db" }
rowan.workspace = true
rustc-hash = "2.0.0"
syntax = { path = "../syntax" }

[dev-dependencies]
itertools = "0.13.0"
test-utils = { path = "../test-utils" }

[lib]
doctest = false
