[package]
name = "definition"
version = "0.0.0"
license.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
base-db = { path = "../base-db" }
rowan.workspace = true
rustc-hash.workspace = true
syntax = { path = "../syntax" }

[dev-dependencies]
itertools.workspace = true
test-utils = { path = "../test-utils" }

[lib]
doctest = false
