[package]
name = "diagnostics"
version = "0.0.0"
license.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
base-db = { path = "../base-db" }
encoding_rs = "0.8.34"
encoding_rs_io = "0.1.7"
itertools = "0.13.0"
line-index = { path = "../line-index" }
log = "0.4.22"
multimap = "0.10.0"
once_cell = "1.19.0"
regex = "1.10.6"
rowan.workspace = true
rustc-hash = "2.0.0"
syntax = { path = "../syntax" }
url = "2.5.0"

[dev-dependencies]
expect-test = "1.5.0"
test-utils = { path = "../test-utils" }

[lib]
doctest = false
