[package]
name = "diagnostics"
version = "0.0.0"
license.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
base-db = { path = "../base-db" }
encoding_rs.workspace = true
encoding_rs_io.workspace = true
itertools.workspace = true
line-index = { path = "../line-index" }
log.workspace = true
multimap.workspace = true
once_cell.workspace = true
regex.workspace = true
rowan.workspace = true
rustc-hash.workspace = true
syntax = { path = "../syntax" }
url.workspace = true

[dev-dependencies]
expect-test.workspace = true
test-utils = { path = "../test-utils" }

[lib]
doctest = false
