[package]
name = "inlay-hints"
version = "0.0.0"
license.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
base-db = { path = "../base-db" }
rowan = "0.15.15"
rustc-hash = "1.1.0"

[dev-dependencies]
test-utils = { path = "../test-utils" }
expect-test = "1.4.1"

[lib]
doctest = false
