[package]
name = "inlay-hints"
version = "0.0.0"
license.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
base-db = { path = "../base-db" }
rowan.workspace = true
rustc-hash = "2.0.0"

[dev-dependencies]
test-utils = { path = "../test-utils" }
expect-test = "1.5.0"

[lib]
doctest = false
