[package]
name = "inlay-hints"
version = "0.0.0"
license.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
base-db = { path = "../base-db" }
rowan.workspace = true
rustc-hash.workspace = true

[dev-dependencies]
test-utils = { path = "../test-utils" }
expect-test.workspace = true

[lib]
doctest = false
