[package]
name = "ipc"
version = "0.0.0"
license.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
crossbeam-channel = "0.5.13"
serde = "1.0.204"
serde_json = "1.0.122"
log = "0.4.22"
uds_windows = "1.1.0"

[lib]
doctest = false

[dev-dependencies]
expect-test = "1.5.0"
parser = { path = "../parser" }
