[package]
name = "ipc"
version = "0.0.0"
license.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
crossbeam-channel.workspace = true
dirs.workspace = true
serde.workspace = true
serde_json.workspace = true
log.workspace = true
uds_windows = "1.1.0"

[lib]
doctest = false

[dev-dependencies]
expect-test.workspace = true
parser = { path = "../parser" }
