[package]
name = "jsonrpc"
version = "0.1.0"
authors = [
    "Eric Förster <efoerster@users.noreply.github.com>",
    "Patrick Förster <pfoerster@users.noreply.github.com>"]
edition = "2018"

[lib]
doctest = false

[dependencies]
chashmap = "2.2"
futures = "0.3"
futures-boxed = { path = "../futures_boxed" }
log = "0.4"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
serde_repr = "0.1"
tokio = { version = "0.2", features = ["full"] }
