[package]
name = "jsonrpc"
version = "0.1.0"
authors = [
    "Eric Förster <eric.foerster@outlook.com>",
    "Patrick Förster <patrick.foerster@outlook.de>"]
edition = "2018"

[lib]
doctest = false

[dependencies]
async-trait = "0.1"
chashmap = "2.2"
futures = "0.3"
log = "0.4"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
serde_repr = "0.1"
tokio = { version = "0.2", features = ["rt-core"] }
