[package]
name = "jsonrpc-derive"
version = "0.1.0"
authors = [
    "Eric Förster <efoerster@users.noreply.github.com>",
    "Patrick Förster <pfoerster@users.noreply.github.com>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
futures-boxed = { path = "../futures_boxed" }
syn = { version = "0.15", features = ["full"] }
quote = "1.0"
