[package]
name = "links"
version = "0.0.0"
license.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
base-db = { path = "../base-db" }

[dev-dependencies]
test-utils = { path = "../test-utils" }
expect-test = "1.5.0"

[lib]
doctest = false
