[package]
name = "parser"
version = "0.0.0"
license.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
log = "0.4.22"
logos = "0.14.0"
once_cell = "1.19.0"
pathdiff = "0.2.1"
regex = "1.10.6"
rowan.workspace = true
rustc-hash = "2.0.0"
syntax = { path = "../syntax" }
tempfile = "3.10.1"
versions = "6.3.1"

[dev-dependencies]
expect-test = "1.5.0"

[lib]
doctest = false
