[package]
name = "parser"
version = "0.0.0"
license.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
log.workspace = true
logos = "0.15.0"
once_cell.workspace = true
pathdiff = "0.2.3"
regex.workspace = true
rowan.workspace = true
rustc-hash.workspace = true
syntax = { path = "../syntax" }
tempfile.workspace = true
versions = "6.3.2"

[dev-dependencies]
expect-test.workspace = true

[lib]
doctest = false
