[package]
name = "parser"
version = "0.0.0"
license.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
distro = { path = "../distro" }
log.workspace = true
logos.workspace = true
once_cell.workspace = true
pathdiff.workspace = true
regex.workspace = true
rowan.workspace = true
rustc-hash.workspace = true
shellexpand.workspace = true
syntax = { path = "../syntax" }
tempfile.workspace = true
versions.workspace = true

[dev-dependencies]
expect-test.workspace = true

[lib]
doctest = false
