[package]
name = "references"
version = "0.0.0"
license.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
base-db = { path = "../base-db" }
rowan = "0.15.13"
syntax = { path = "../syntax" }

[dev-dependencies]
test-utils = { path = "../test-utils" }

[lib]
doctest = false
