[package]
name = "symbols"
version = "0.0.0"
license.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
doctest = false

[dependencies]
base-db = { path = "../base-db" }
distro = { path = "../distro" }
itertools = "0.11.0"
line-index = { path = "../line-index" }
rowan = "0.15.13"
syntax = { path = "../syntax" }
titlecase = "2.2.1"
url = "=2.3.1"

[dev-dependencies]
regex = "1.9.1"
test-utils = { path = "../test-utils" }
expect-test = "1.4.1"
