[package]
name = "symbols"
version = "0.0.0"
license.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
doctest = false

[dependencies]
base-db = { path = "../base-db" }
distro = { path = "../distro" }
itertools = "0.13.0"
line-index = { path = "../line-index" }
rowan = "0.15.15"
syntax = { path = "../syntax" }
titlecase = "3.3.0"
url = "2.5.0"

[dev-dependencies]
regex = "1.10.5"
test-utils = { path = "../test-utils" }
expect-test = "1.5.0"
