[package]
name = "symbols"
version = "0.0.0"
license.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
doctest = false

[dependencies]
base-db = { path = "../base-db" }
distro = { path = "../distro" }
itertools.workspace = true
line-index = { path = "../line-index" }
rowan.workspace = true
syntax = { path = "../syntax" }
titlecase.workspace = true
url.workspace = true

[dev-dependencies]
expect-test.workspace = true
regex.workspace = true
rustc-hash.workspace = true
test-utils = { path = "../test-utils" }
