[package]
name = "test-utils"
version = "0.0.0"
license.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
base-db = { path = "../base-db" }
distro = { path = "../distro" }
rowan = "0.15.11"
syntax = { path = "../syntax" }
url = "2.3.1"

[lib]
doctest = false
