[package]
name = "test-utils"
version = "0.0.0"
license.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
base-db = { path = "../base-db" }
distro = { path = "../distro" }
line-index = { path = "../line-index" }
rowan = "0.15.15"
url = "2.5.0"

[lib]
doctest = false
