[package]
name = "tex"
version = "0.1.0"
authors = [
    "Eric Förster <efoerster@users.noreply.github.com>",
    "Patrick Förster <pfoerster@users.noreply.github.com>"]
edition = "2018"

[dependencies]
byteorder = "1"
futures-boxed = { path = "../futures_boxed" }
futures-preview = "0.3.0-alpha.18"
log = "0.4.6"
tempfile = "3"
tokio = "0.2.0-alpha.6"
tokio-net = { version = "0.2.0-alpha.6", features = ["process"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
