[package]
name = "texlab"
description = "LaTeX Language Server"
version = "5.16.0"
license.workspace = true
readme = "README.md"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
homepage = "https://github.com/latex-lsp/texlab"
repository = "https://github.com/latex-lsp/texlab"
documentation = "https://github.com/latex-lsp/texlab"
keywords = ["lsp", "server", "latex", "bibtex"]
categories = ["development-tools"]
exclude = ["*.snap"]

[[bin]]
name = "texlab"
test = false

[lib]
doctest = false

[dependencies]
anyhow = "1.0.82"
base-db = { path = "../base-db" }
bibfmt = { path = "../bibfmt" }
citeproc = { path = "../citeproc" }
clap = { version = "4.5.4", features = ["derive"] }
commands = { path = "../commands" }
completion = { path = "../completion" }
completion-data = { path = "../completion-data" }
crossbeam-channel = "0.5.12"
definition = { path = "../definition" }
diagnostics = { path = "../diagnostics" }
distro = { path = "../distro" }
fern = "0.6.2"
folding = { path = "../folding" }
highlights = { path = "../highlights" }
hover = { path = "../hover" }
inlay-hints = { path = "../inlay-hints" }
ipc = { path = "../ipc" }
line-index = { path = "../line-index" }
links = { path = "../links" }
log = "0.4.21"
lsp-server = "0.7.6"
lsp-types = "0.95.1"
notify = "6.1.1"
notify-debouncer-full = "0.3.1"
parking_lot = "0.12.1"
parser = { path = "../parser" }
references = { path = "../references" }
regex = "1.10.4"
rename = { path = "../rename" }
rowan = "0.15.15"
rustc-hash = "1.1.0"
serde = "1.0.200"
serde_json = "1.0.115"
serde_regex = "1.1.0"
serde_repr = "0.1.19"
symbols = { path = "../symbols" }
syntax = { path = "../syntax" }
tempfile = "3.10.1"
threadpool = "1.8.1"

[dev-dependencies]
criterion = { version = "0.5.1" }

[[bench]]
name = "bench_main"
path = "benches/bench_main.rs"
harness = false
