[package]
name = "texlab"
description = "LaTeX Language Server"
version.workspace = true
license.workspace = true
readme = "README.md"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
homepage = "https://github.com/latex-lsp/texlab"
repository = "https://github.com/latex-lsp/texlab"
documentation = "https://github.com/latex-lsp/texlab"
keywords = ["lsp", "server", "latex", "bibtex"]
categories = ["development-tools"]
exclude = ["*.snap"]

[[bin]]
name = "texlab"
test = false

[lib]
doctest = false

[dependencies]
anyhow.workspace = true
base-db = { path = "../base-db" }
bibfmt = { path = "../bibfmt" }
citeproc = { path = "../citeproc" }
clap = { version = "4.5.13", features = ["derive"] }
commands = { path = "../commands" }
completion = { path = "../completion" }
completion-data = { path = "../completion-data" }
crossbeam-channel.workspace = true
definition = { path = "../definition" }
diagnostics = { path = "../diagnostics" }
distro = { path = "../distro" }
fern = "0.6.2"
folding = { path = "../folding" }
highlights = { path = "../highlights" }
hover = { path = "../hover" }
inlay-hints = { path = "../inlay-hints" }
ipc = { path = "../ipc" }
line-index = { path = "../line-index" }
links = { path = "../links" }
log.workspace = true
lsp-server = "0.7.6"
lsp-types = "0.95.1"
notify.workspace = true
notify-debouncer-full = "0.3.1"
parking_lot = "0.12.3"
parser = { path = "../parser" }
references = { path = "../references" }
regex.workspace = true
rename = { path = "../rename" }
rowan.workspace = true
rustc-hash.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_regex = "1.1.0"
serde_repr = "0.1.19"
symbols = { path = "../symbols" }
syntax = { path = "../syntax" }
tempfile.workspace = true
threadpool = "1.8.1"

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "bench_main"
path = "benches/bench_main.rs"
harness = false
