[package]
name = "texlab"
description = "LaTeX Language Server"
version.workspace = true
license.workspace = true
readme = "README.md"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
homepage = "https://github.com/latex-lsp/texlab"
repository = "https://github.com/latex-lsp/texlab"
documentation = "https://github.com/latex-lsp/texlab"
keywords = ["lsp", "server", "latex", "bibtex"]
categories = ["development-tools"]
exclude = ["*.snap"]

[[bin]]
name = "texlab"
test = false

[lib]
doctest = false

[dependencies]
anyhow.workspace = true
base-db = { path = "../base-db" }
bibfmt = { path = "../bibfmt" }
citeproc = { path = "../citeproc" }
clap = { workspace = true, features = ["derive"] }
commands = { path = "../commands" }
completion = { path = "../completion" }
completion-data = { path = "../completion-data" }
crossbeam-channel.workspace = true
definition = { path = "../definition" }
diagnostics = { path = "../diagnostics" }
distro = { path = "../distro" }
fern.workspace = true
folding = { path = "../folding" }
highlights = { path = "../highlights" }
hover = { path = "../hover" }
inlay-hints = { path = "../inlay-hints" }
ipc = { path = "../ipc" }
line-index = { path = "../line-index" }
links = { path = "../links" }
log.workspace = true
lsp-server.workspace = true
lsp-types.workspace = true
notify-debouncer-full.workspace = true
notify.workspace = true
parking_lot.workspace = true
parser = { path = "../parser" }
references = { path = "../references" }
regex.workspace = true
rename = { path = "../rename" }
rowan.workspace = true
rustc-hash.workspace = true
serde_json.workspace = true
serde_regex.workspace = true
serde_repr.workspace = true
serde.workspace = true
symbols = { path = "../symbols" }
syntax = { path = "../syntax" }
tempfile.workspace = true
threadpool.workspace = true
titlecase.workspace = true
url.workspace = true

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "bench_main"
path = "benches/bench_main.rs"
harness = false
