[package]
name = "texlab-citeproc"
version = "0.1.0"
authors = [
    "Eric Förster <efoerster@users.noreply.github.com>",
    "Patrick Förster <pfoerster@users.noreply.github.com>"]
edition = "2018"

[dependencies]
bibutils = { path = "../bibutils" }
citeproc = { git = "https://github.com/cormacrelf/citeproc-rs", rev = "68c7a7c16088b5d7751641ab37299ad064cdb221" }
citeproc-db = { git = "https://github.com/cormacrelf/citeproc-rs", rev = "68c7a7c16088b5d7751641ab37299ad064cdb221" }
citeproc-io = { git = "https://github.com/cormacrelf/citeproc-rs", rev = "68c7a7c16088b5d7751641ab37299ad064cdb221" }
csl = { git = "https://github.com/cormacrelf/citeproc-rs", rev = "68c7a7c16088b5d7751641ab37299ad064cdb221" }
fnv = "1.0.3"
html2md = "0.2.9"
itertools = "0.8.2"
lalrpop-util = "0.17.2"
once_cell = "1.3.1"
regex = "1.3.4"
serde = { version = "1.0.104", features = ["derive", "rc"] }
serde_json = "1.0.48"
texlab-protocol = { path = "../texlab_protocol" }
texlab-syntax = { path = "../texlab_syntax" }

[build-dependencies]
lalrpop = "0.17.2"
