[package]
name = "texlab-citeproc"
version = "0.1.0"
authors = [
    "Eric Förster <efoerster@users.noreply.github.com>",
    "Patrick Förster <pfoerster@users.noreply.github.com>"]
edition = "2018"

[lib]
doctest = false

[dependencies]
bibutils-sys = { path = "../bibutils_sys" }
citeproc = { git = "https://github.com/cormacrelf/citeproc-rs", rev = "68c7a7c16088b5d7751641ab37299ad064cdb221" }
citeproc-db = { git = "https://github.com/cormacrelf/citeproc-rs", rev = "68c7a7c16088b5d7751641ab37299ad064cdb221" }
citeproc-io = { git = "https://github.com/cormacrelf/citeproc-rs", rev = "68c7a7c16088b5d7751641ab37299ad064cdb221" }
csl = { git = "https://github.com/cormacrelf/citeproc-rs", rev = "68c7a7c16088b5d7751641ab37299ad064cdb221" }
fnv = "1.0"
html2md = "0.2"
itertools = "0.9"
lalrpop-util = "0.18"
once_cell = "1.3"
regex = "1.3"
tempfile = "3.1"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
texlab-protocol = { path = "../texlab_protocol" }
texlab-syntax = { path = "../texlab_syntax" }

[build-dependencies]
lalrpop = { version = "0.18", features = ["lexer"] }

[dev-dependencies]
indoc = "0.3"
