[package]
name = "texlab-completion"
version = "0.1.0"
authors = [
    "Eric Förster <efoerster@users.noreply.github.com>",
    "Patrick Förster <pfoerster@users.noreply.github.com>"]
edition = "2018"

[dependencies]
futures-boxed = { path = "../futures_boxed" }
futures-preview = { version = "0.3.0-alpha.15", features = ["compat"] }
itertools = "0.8.0"
log = "0.4.6"
lsp-types = { git = "https://github.com/latex-lsp/lsp-types", rev = "9fcc5d9b9d3013ce84e20ef566267754d594b268", features = ["proposed"] }
once_cell = "0.2.4"
regex = "1.2.0"
serde = { version = "1.0.97", features = ["derive", "rc"] }
serde_json = "1.0.40"
texlab-completion-data = { path = "../texlab_completion_data" }
texlab-formatting = { path = "../texlab_formatting" }
texlab-syntax = { path = "../texlab_syntax" }
texlab-workspace = { path = "../texlab_workspace" }
walkdir = "2"